main2016: Fix footer and logo alignment in mobile

--- a/Instanssi/main2017/static/main2017/css/style.scss
+++ b/Instanssi/main2017/static/main2017/css/style.scss
@@ -205,6 +205,8 @@ $main-content-height: calc(100vh - #{$main-header-actual} - #{$main-footer-actua
     #content {
         padding: $padding-large 0;
     }
+    #page-footer .container { padding: 0; }
+    // fix sidebars
     .container aside > section > div {
         padding: $padding-medium;
     }
@@ -226,6 +228,7 @@ $main-content-height: calc(100vh - #{$main-header-actual} - #{$main-footer-actua
 
             p.time {
                 font-size: 20px;
+                padding-left: 0;
             }
 
             .logo > * {
